# serializer version: 1
# name: test_full_import_dry_run[logs]
  list([
    'Command launched with wet_run=False',
    'Importing references data',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/frais "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=2 label=ReferenceDatum added by collection',
    '\tADDED {"value": "gratuit", "label": "Gratuit", "description": "L’accès au lieu et/ou à ses services est gratuit"}',
    '\tADDED {"value": "payant", "label": "Payant", "description": "L’accès au lieu et/ou à ses services est payant"}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/modes-accueil "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=2 label=ReferenceDatum added by collection',
    '\tADDED {"value": "a-distance", "label": "À distance", "description": "Le service est proposé à distance, par téléphone ou internet."}',
    '\tADDED {"value": "en-presentiel", "label": "En présentiel", "description": "Le service est proposé en présentiel, à l’adresse associée à ce service."}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/modes-mobilisation "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=4 label=ReferenceDatum added by collection',
    '\tADDED {"value": "envoyer-un-courriel", "label": "Envoyer un courriel", "description": "Envoyer un courriel à l’adresse électronique associée au service, ou à défaut, à la structure."}',
    '\tADDED {"value": "se-presenter", "label": "Se présenter", "description": "Se présenter directement à l’adresse associée au service ou, à défaut, à la structure."}',
    '\tADDED {"value": "telephoner", "label": "Téléphoner", "description": "Téléphoner au numéro associé au service, ou à défaut, à la structure."}',
    '\tADDED {"value": "utiliser-lien-mobilisation", "label": "Utiliser le lien de mobilisation", "description": "Utiliser le lien de mobilisation du service."}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/personnes-mobilisatrices "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=2 label=ReferenceDatum added by collection',
    '\tADDED {"value": "professionnels", "label": "Professionnels", "description": "Service mobilisable par les professionnels de l’insertion."}',
    '\tADDED {"value": "usagers", "label": "Usagers", "description": "Service mobilisable par les usagers."}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/publics "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=14 label=ReferenceDatum added by collection',
    '\tADDED {"value": "actifs", "label": "Actifs", "description": "Toute personne ayant un emploi, qu’il soit salarié, libéral ou à son compte"}',
    '\tADDED {"value": "beneficiaires-des-minimas-sociaux", "label": "Bénéficiaires des minimas sociaux", "description": "Personnes touchant des aides financières telles que RSA, SMIC, allocations familiales, bourses, etc"}',
    '\tADDED {"value": "demandeurs-emploi", "label": "Demandeurs d’emploi", "description": "Demandeurs d’emploi de tout type"}',
    '\tADDED {"value": "etudiants", "label": "Étudiants", "description": "Étudiants"}',
    '\tADDED {"value": "familles", "label": "Familles", "description": "Familles, parents, enfants, etc"}',
    '\tADDED {"value": "femmes", "label": "Femmes", "description": "Femmes isolées, victimes de violence, etc"}',
    '\tADDED {"value": "jeunes", "label": "Jeunes", "description": "Jeunes au sens large, jeunes adultes, adolescents, etc"}',
    '\tADDED {"value": "personnes-en-situation-de-handicap", "label": "Personnes en situation de handicap", "description": "Personnes en situation de handicap de tout type"}',
    '\tADDED {"value": "personnes-en-situation-durgence", "label": "Personnes en situation d’urgence", "description": "SDF, victimes de violence, grande précarité, etc"}',
    '\tADDED {"value": "personnes-en-situation-juridique-specifique", "label": "Personnes en situation juridique spécifique", "description": "Personnes sortant de détention, détenus ou autre statut juridique spécifique"}',
    '\tADDED {"value": "personnes-exilees", "label": "Personnes exilées", "description": "Réfugiés, demandeurs d’asile, personnes immigrées, etc"}',
    '\tADDED {"value": "residents-qpv-frr", "label": "Résidents en QPV ou FRR", "description": "Personnes résidentes en zone Quartier Prioritaire de la Ville ou France Ruralités Revitalisation (anciennement ZRR)"}',
    '\tADDED {"value": "seniors", "label": "Séniors", "description": "Personnes âgées, retraités, etc"}',
    '\tADDED {"value": "tous-publics", "label": "Tous publics", "description": "Tous publics"}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/reseaux-porteurs "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=107 label=ReferenceDatum added by collection',
    '\tADDED {"value": "60000-rebonds", "label": "60 000 Rebonds", "description": null}',
    '\tADDED {"value": "aci", "label": "Structures d’Insertion par l’Activité Économique - Ateliers et Chantiers d’Insertion", "description": null}',
    '\tADDED {"value": "action-logement", "label": "Action Logement", "description": null}',
    '\tADDED {"value": "adie", "label": "Association pour le Droit à l’Initiative Économique", "description": null}',
    '\tADDED {"value": "afpa", "label": "Agence Nationale pour la Formation Professionnelle des Adultes", "description": null}',
    '\tADDED {"value": "agefiph", "label": "Agefiph", "description": null}',
    '\tADDED {"value": "ai", "label": "Associations Intermédiaires", "description": null}',
    '\tADDED {"value": "aidants-connect", "label": "Aidants Connect", "description": null}',
    '\tADDED {"value": "alliance-villes-emploi", "label": "Alliance Villes Emploi", "description": null}',
    '\tADDED {"value": "anlci", "label": "Agence Nationale de Lutte Contre l’Illettrisme", "description": null}',
    '\tADDED {"value": "apprentis-dauteuil", "label": "Apprentis d’Auteuil", "description": null}',
    '\tADDED {"value": "ase", "label": "Aide Sociale à l’Enfance", "description": null}',
    '\tADDED {"value": "banques-alimentaires", "label": "Banques Alimentaires", "description": null}',
    '\tADDED {"value": "caarud", "label": "Centres d’Accueil et d’Accompagnement à la Réduction de Risques pour Usagers de Drogues", "description": null}',
    '\tADDED {"value": "cada", "label": "Centres d’Accueil de Demandeurs d’Asile", "description": null}',
    '\tADDED {"value": "caf", "label": "Caisse d’Allocations Familiales", "description": null}',
    '\tADDED {"value": "campus-connecte", "label": "Campus Connecté", "description": null}',
    '\tADDED {"value": "cap-emploi-reseau-cheops", "label": "CAP Emploi - Réseau CHEOPS", "description": null}',
    '\tADDED {"value": "cava", "label": "Centres d’Adaptation à la Vie Active", "description": null}',
    '\tADDED {"value": "ccas-cias", "label": "Les Centres Communaux d’Action Sociale et les Centres Intercommunaux d’Action Sociale", "description": null}',
    '\tADDED {"value": "chambres-consulaires", "label": "Chambres Consulaires", "description": "Les Chambres de Commerce et d’Industrie (CCI), les Chambres des Métiers et de l’Artisanat (CMA) et les Chambres d’Agriculture (CA)."}',
    '\tADDED {"value": "chantier-ecole", "label": "Réseau Chantier École", "description": null}',
    '\tADDED {"value": "chrs", "label": "Centres d’Hébergement et de Réinsertion Sociale", "description": null}',
    '\tADDED {"value": "chu", "label": "Centres d’Hébergement d’Urgence", "description": null}',
    '\tADDED {"value": "cidff", "label": "Centres d’Information sur les Droits des Femmes et des Familles", "description": null}',
    '\tADDED {"value": "cmp", "label": "Centres Médico-Psychologiques", "description": null}',
    '\tADDED {"value": "cms", "label": "Centres Médico-Sociaux", "description": null}',
    '\tADDED {"value": "cnam", "label": "Conservatoire National des Arts et Métiers", "description": null}',
    '\tADDED {"value": "collectif-emploi", "label": "Collectif Emploi", "description": null}',
    '\tADDED {"value": "communes", "label": "Communes, mairies, communautés de communes, etc.", "description": null}',
    '\tADDED {"value": "conseillers-numeriques", "label": "Conseillers Numériques", "description": null}',
    '\tADDED {"value": "coorace", "label": "Fédération COORACE", "description": null}',
    '\tADDED {"value": "cpam", "label": "Caisses Primaires d’Assurance Maladie", "description": null}',
    '\tADDED {"value": "cph", "label": "Centres Provisoires d’Hébergement", "description": null}',
    '\tADDED {"value": "creches-avip", "label": "Crèches à Vocation d’Insertion Professionnelle", "description": null}',
    '\tADDED {"value": "crepi", "label": "CREPI", "description": null}',
    '\tADDED {"value": "cresus", "label": "Fédération Française des Associations CRÉSUS", "description": null}',
    '\tADDED {"value": "croix-rouge", "label": "Croix-Rouge", "description": null}',
    '\tADDED {"value": "csapa", "label": "Centres de Soins, d’Accompagnement et de Prévention en Addictologie", "description": null}',
    '\tADDED {"value": "delegataire-conseil-departemental", "label": "Organisation délégataire d’un Conseil Départemental", "description": null}',
    '\tADDED {"value": "departements", "label": "Départements et Services Départementaux", "description": "Les Conseils Départementaux (CD), les Maisons Départementales pour les Personnes Handicapées (MDPH), les Unions Départementales des Associations Familiales (UDAF), les Centres Départementaux d’Action Sociale (CDAS), etc."}',
    '\tADDED {"value": "duo-for-a-job", "label": "DUO for a JOB", "description": null}',
    '\tADDED {"value": "ea", "label": "Entreprises Adaptées", "description": null}',
    '\tADDED {"value": "eatt", "label": "Entreprises Adaptées de Travail Temporaire", "description": null}',
    '\tADDED {"value": "ecoles-de-la-deuxieme-chance", "label": "Écoles de la 2ᵉ Chance", "description": null}',
    '\tADDED {"value": "egee", "label": "Association EGEE", "description": null}',
    '\tADDED {"value": "ei", "label": "Structures d’Insertion par l’Activité Économique - Entreprises d’Insertion", "description": null}',
    '\tADDED {"value": "eiti", "label": "Structures d’Insertion par l’Activité Économique - Entreprises d’Insertion par le Travail Indépendant", "description": null}',
    '\tADDED {"value": "emmaus", "label": "Emmaüs", "description": null}',
    '\tADDED {"value": "epide", "label": "EPIDE", "description": null}',
    '\tADDED {"value": "esat", "label": "Établissement et Service d’Accompagnement par le Travail", "description": null}',
    '\tADDED {"value": "espaces-publics-numeriques", "label": "Espaces Publics Numériques", "description": null}',
    '\tADDED {"value": "etcld", "label": "Expérimentation Territoriale contre le Chômage de Longue Durée", "description": null}',
    '\tADDED {"value": "etti", "label": "Structures d’Insertion par l’Activité Économique - Entreprises de Travail Temporaire d’Insertion", "description": null}',
    '\tADDED {"value": "fabrique-de-territoire", "label": "Fabrique de Territoire", "description": null}',
    '\tADDED {"value": "face", "label": "Fondation FACE", "description": null}',
    '\tADDED {"value": "fcsf", "label": "Fédération des Centres Sociaux et Socioculturels de France", "description": null}',
    '\tADDED {"value": "federation-des-acteurs-de-la-solidarite", "label": "Fédération des Acteurs de la Solidarité", "description": null}',
    '\tADDED {"value": "federation-professionnelle-femmes", "label": "Fédération Professionnelle pour les Femmes", "description": null}',
    '\tADDED {"value": "france-active", "label": "France Active", "description": null}',
    '\tADDED {"value": "france-service", "label": "France Service", "description": null}',
    '\tADDED {"value": "france-travail", "label": "France Travail", "description": null}',
    '\tADDED {"value": "french-tech", "label": "French Tech", "description": null}',
    '\tADDED {"value": "geiq", "label": "GEIQ", "description": null}',
    '\tADDED {"value": "grandes-ecoles-du-numerique", "label": "Grandes Écoles du Numérique", "description": null}',
    '\tADDED {"value": "huda", "label": "Hébergement d’Urgence pour Demandeurs d’Asile", "description": null}',
    '\tADDED {"value": "hup", "label": "Association H’UP", "description": null}',
    '\tADDED {"value": "inae", "label": "INAÉ Nouvelle Aquitaine", "description": null}',
    '\tADDED {"value": "initiative-france", "label": "Initiative France", "description": null}',
    '\tADDED {"value": "konexio", "label": "Association Konexio", "description": null}',
    '\tADDED {"value": "la-cravate-solidaire", "label": "La Cravate Solidaire", "description": null}',
    '\tADDED {"value": "la-poste", "label": "La Poste", "description": null}',
    '\tADDED {"value": "les-premieres", "label": "Les Premières", "description": null}',
    '\tADDED {"value": "maison-departementale-de-lautonomie", "label": "Maisons Départementales de l’Autonomie", "description": null}',
    '\tADDED {"value": "maisons-de-l-emploi", "label": "Maisons de l’Emploi", "description": null}',
    '\tADDED {"value": "maisons-des-solidarites", "label": "Maisons Départementales des Solidarités (MDS)", "description": "Les Maisons Départementales des Solidarités sont des services départementaux. Par conséquent, le réseau `departements` devrait être également défini pour ces structures."}',
    '\tADDED {"value": "mission-locale", "label": "Mission Locale", "description": null}',
    '\tADDED {"value": "mjc", "label": "Maisons des Jeunes et de la Culture", "description": null}',
    '\tADDED {"value": "mobin", "label": "Mob’In", "description": null}',
    '\tADDED {"value": "msap", "label": "Maisons de Services Au Public", "description": null}',
    '\tADDED {"value": "mutualite-sociale-agricole", "label": "Mutualité Sociale Agricole", "description": null}',
    '\tADDED {"value": "nqt", "label": "Association NQT", "description": null}',
    '\tADDED {"value": "pimms-mediation", "label": "Point Information Médiation Multi Services", "description": null}',
    '\tADDED {"value": "pjj", "label": "Protection Judiciaire de la Jeunesse", "description": null}',
    '\tADDED {"value": "plie", "label": "Plans Locaux pour l’Insertion et l’Emploi", "description": null}',
    '\tADDED {"value": "points-conseil-budget", "label": "Points Conseil Budget", "description": null}',
    '\tADDED {"value": "points-justice", "label": "Points Justice", "description": null}',
    '\tADDED {"value": "positive-planet", "label": "Positive Planet", "description": null}',
    '\tADDED {"value": "regions", "label": "Régions, Préfectures et services régionaux", "description": "Les Conseils Régionaux (CR), les préfectures, les Directions Régionales de l’Économie, de l’Emploi, du Travail et desSolidarités (DREETS), etc."}',
    '\tADDED {"value": "reseau-app", "label": "Réseau APP", "description": null}',
    '\tADDED {"value": "reseau-bge", "label": "Réseau BGE", "description": null}',
    '\tADDED {"value": "reseau-entreprendre", "label": "Réseau Entreprendre", "description": null}',
    '\tADDED {"value": "reseau-information-jeunesse", "label": "Réseau Information Jeunesse", "description": null}',
    '\tADDED {"value": "residences-fjt", "label": "Résidences - Foyers Jeunes Travailleurs", "description": null}',
    '\tADDED {"value": "ressourceries", "label": "Ressourceries", "description": null}',
    '\tADDED {"value": "restos-du-coeur", "label": "Restos du Coeur", "description": null}',
    '\tADDED {"value": "secours-populaire", "label": "Secours Populaire", "description": null}',
    '\tADDED {"value": "siao", "label": "Services Intégrés d’Accueil et d’Orientation", "description": null}',
    '\tADDED {"value": "simplon", "label": "Simplon", "description": null}',
    '\tADDED {"value": "singa", "label": "Association SINGA", "description": null}',
    '\tADDED {"value": "snc", "label": "Solidarité Nouvelle Face au Chômage", "description": null}',
    '\tADDED {"value": "spip", "label": "Services Pénitentiaires d’Insertion et de Probation", "description": null}',
    '\tADDED {"value": "tous-tes-possibles", "label": "Tous Tes Possibles", "description": null}',
    '\tADDED {"value": "unaf", "label": "Union Nationale de l’Aide aux Familles", "description": null}',
    '\tADDED {"value": "unea", "label": "Union Nationale des Entreprises Adaptées", "description": null}',
    '\tADDED {"value": "unis-cite", "label": "UnisCité", "description": null}',
    '\tADDED {"value": "wimoov", "label": "Wimoov", "description": null}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/thematiques "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=69 label=ReferenceDatum added by collection',
    '\tADDED {"value": "choisir-un-metier--confirmer-son-choix-de-metier", "label": "Confirmer son choix de métier", "description": null}',
    '\tADDED {"value": "choisir-un-metier--connaitre-les-opportunites-demploi", "label": "Connaître les opportunités d’emploi", "description": null}',
    '\tADDED {"value": "choisir-un-metier--decouvrir-un-metier-ou-un-secteur-dactivite", "label": "Découvrir un métier ou un secteur d’activité", "description": null}',
    '\tADDED {"value": "choisir-un-metier--identifier-ses-points-forts-et-ses-competences", "label": "Identifier ses points forts et ses compétences", "description": null}',
    '\tADDED {"value": "creer-une-entreprise--definir-son-projet-de-creation-dentreprise", "label": "Définir son projet de création d’entreprise", "description": null}',
    '\tADDED {"value": "creer-une-entreprise--developper-son-entreprise", "label": "Développer son entreprise", "description": null}',
    '\tADDED {"value": "creer-une-entreprise--structurer-son-projet-de-creation-dentreprise", "label": "Structurer son projet de création d’entreprise", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--accompagnement-aux-demarches-administratives", "label": "Accompagnement aux démarches administratives", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--accompagnement-pour-lacces-a-la-citoyennete", "label": "Accompagnement pour l’accès à la citoyenneté", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--accompagnement-pour-lacces-aux-droits", "label": "Accompagnement pour l’accès aux droits", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--beneficier-dune-mesure-daccompagnement-adapte", "label": "Bénéficier d’une mesure d’accompagnement adapté", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--connaitre-ses-droits-face-a-une-discrimination", "label": "Connaître ses droits face à une discrimination", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--prendre-en-compte-une-problematique-judiciaire", "label": "Prendre en compte une problématique judiciaire", "description": null}',
    '\tADDED {"value": "difficultes-financieres--acquerir-une-autonomie-budgetaire", "label": "Acquérir une autonomie budgétaire", "description": null}',
    '\tADDED {"value": "difficultes-financieres--ameliorer-sa-gestion-budgetaire", "label": "Améliorer sa gestion budgétaire", "description": null}',
    '\tADDED {"value": "difficultes-financieres--mettre-en-place-une-mesure-de-protection-financiere", "label": "Mettre en place une mesure de protection financière", "description": null}',
    '\tADDED {"value": "difficultes-financieres--prevenir-une-degradation-de-la-situation-financiere", "label": "Prévenir une dégradation de la situation financière", "description": null}',
    '\tADDED {"value": "difficultes-financieres--situation-dendettement-surendettement", "label": "Situation d’endettement ou de surendettement", "description": null}',
    '\tADDED {"value": "equipement-et-alimentation--aide-menagere", "label": "Aide ménagère", "description": null}',
    '\tADDED {"value": "equipement-et-alimentation--alimentation", "label": "Alimentation", "description": null}',
    '\tADDED {"value": "equipement-et-alimentation--electromenager", "label": "Électroménager", "description": null}',
    '\tADDED {"value": "equipement-et-alimentation--habillement", "label": "Habillement", "description": null}',
    '\tADDED {"value": "famille--garde-denfants", "label": "Garde d’enfants", "description": null}',
    '\tADDED {"value": "famille--prise-en-charge-personne-dependante", "label": "Prise en charge d’une personne dépendante", "description": null}',
    '\tADDED {"value": "famille--soutien-a-la-parentalite-et-a-leducation", "label": "Soutien à la parentalité et à l’éducation", "description": null}',
    '\tADDED {"value": "famille--soutien-aidants", "label": "Soutien aux aidants", "description": null}',
    '\tADDED {"value": "famille--surmonter-conflits-separation-violence", "label": "Surmonter les conflits liés à la séparation ou à la violence", "description": null}',
    '\tADDED {"value": "lecture-ecriture-calcul--maitriser-le-calcul", "label": "Maîtriser le calcul", "description": null}',
    '\tADDED {"value": "lecture-ecriture-calcul--maitriser-le-francais", "label": "Maîtriser le français", "description": null}',
    '\tADDED {"value": "logement-hebergement--acheter-un-logement", "label": "Acheter un logement", "description": null}',
    '\tADDED {"value": "logement-hebergement--changer-de-logement", "label": "Changer de logement", "description": null}',
    '\tADDED {"value": "logement-hebergement--louer-un-logement", "label": "Louer un logement", "description": null}',
    '\tADDED {"value": "logement-hebergement--rechercher-une-solution-dhebergement-temporaire", "label": "Rechercher une solution d’hébergement temporaire", "description": null}',
    '\tADDED {"value": "logement-hebergement--reduire-les-impayes-de-loyer", "label": "Réduire les impayés de loyer", "description": null}',
    '\tADDED {"value": "logement-hebergement--se-maintenir-dans-le-logement", "label": "Se maintenir dans le logement", "description": null}',
    '\tADDED {"value": "logement-hebergement--sinformer-sur-les-demarches-liees-a-lacces-au-logement", "label": "S’informer sur les démarches liées à l’accès au logement", "description": null}',
    '\tADDED {"value": "mobilite--acceder-a-un-vehicule", "label": "Accéder à un véhicule", "description": null}',
    '\tADDED {"value": "mobilite--entretenir-reparer-son-vehicule", "label": "Entretenir et réparer son véhicule", "description": null}',
    '\tADDED {"value": "mobilite--etre-accompagne-dans-son-parcours-mobilite", "label": "Être accompagné dans son parcours mobilité", "description": null}',
    '\tADDED {"value": "mobilite--financer-ma-mobilite", "label": "Financer ma mobilité", "description": null}',
    '\tADDED {"value": "mobilite--mobilite-douce-partagee-collective", "label": "Utiliser des services de mobilité douce, partagée ou collective", "description": null}',
    '\tADDED {"value": "mobilite--preparer-un-permis", "label": "Préparer un permis", "description": null}',
    '\tADDED {"value": "numerique--acceder-a-des-services-en-ligne", "label": "Accéder à des services en ligne", "description": null}',
    '\tADDED {"value": "numerique--acceder-a-une-connexion-internet", "label": "Accéder à une connexion Internet", "description": null}',
    '\tADDED {"value": "numerique--acquerir-un-equipement", "label": "Acquérir un équipement", "description": null}',
    '\tADDED {"value": "numerique--maitriser-les-fondamentaux-du-numerique", "label": "Maîtriser les fondamentaux du numérique", "description": null}',
    '\tADDED {"value": "preparer-sa-candidature--developper-son-reseau", "label": "Développer son réseau", "description": null}',
    '\tADDED {"value": "preparer-sa-candidature--organiser-ses-demarches-de-recherche-demploi", "label": "Organiser ses démarches de recherche d’emploi", "description": null}',
    '\tADDED {"value": "preparer-sa-candidature--realiser-un-cv-et-ou-une-lettre-de-motivation", "label": "Réaliser un CV et/ou une lettre de motivation", "description": null}',
    '\tADDED {"value": "preparer-sa-candidature--valoriser-ses-competences", "label": "Valoriser ses compétences", "description": null}',
    '\tADDED {"value": "remobilisation--activites-sportives-et-culturelles", "label": "Activités sportives et culturelles", "description": null}',
    '\tADDED {"value": "remobilisation--benevolat-action-citoyenne", "label": "Bénévolat et action citoyenne", "description": null}',
    '\tADDED {"value": "remobilisation--bien-etre-confiance-en-soi", "label": "Bien-être et confiance en soi", "description": null}',
    '\tADDED {"value": "remobilisation--lien-social", "label": "Lien social", "description": null}',
    '\tADDED {"value": "sante--acces-aux-soins", "label": "Accès aux soins", "description": null}',
    '\tADDED {"value": "sante--addictions", "label": "Addictions", "description": null}',
    '\tADDED {"value": "sante--constituer-un-dossier-mdph-invalidite", "label": "Constituer un dossier MDPH pour invalidité", "description": null}',
    '\tADDED {"value": "sante--sante-mentale", "label": "Santé mentale", "description": null}',
    '\tADDED {"value": "sante--sante-sexuelle", "label": "Santé sexuelle", "description": null}',
    '\tADDED {"value": "se-former--monter-son-dossier-de-formation", "label": "Monter son dossier de formation", "description": null}',
    '\tADDED {"value": "se-former--trouver-sa-formation", "label": "Trouver sa formation", "description": null}',
    '\tADDED {"value": "souvrir-a-linternational--connaitre-les-opportunites-demploi-a-letranger", "label": "Connaître les opportunités d’emploi à l’étranger", "description": null}',
    '\tADDED {"value": "souvrir-a-linternational--sinformer-sur-les-aides-pour-travailler-a-letranger", "label": "S’informer sur les aides pour travailler à l’étranger", "description": null}',
    '\tADDED {"value": "souvrir-a-linternational--sorganiser-suite-a-son-retour-en-france", "label": "S’organiser suite à son retour en France", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--convaincre-un-recruteur-en-entretien", "label": "Convaincre un recruteur en entretien", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--faire-des-candidatures-spontanees", "label": "Faire des candidatures spontanées", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--maintien-dans-lemploi", "label": "Maintien dans l’emploi", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--repondre-a-des-offres-demploi", "label": "Répondre à des offres d’emploi", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--suivre-ses-candidatures-et-relancer-les-employeurs", "label": "Suivre ses candidatures et relancer les employeurs", "description": null}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/types-services "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=6 label=ReferenceDatum added by collection',
    '\tADDED {"value": "accompagnement", "label": "Accompagnement", "description": "Accompagnement global pour le retour à l’emploi"}',
    '\tADDED {"value": "aide-financiere", "label": "Aide financière", "description": "Prise en charge financière, aide ou rémunération soutenant le retour à l’emploi"}',
    '\tADDED {"value": "aide-materielle", "label": "Aide materielle", "description": "Accéder à du matériel soutenant le retour à l’emploi (voiture, vélo, ordinateur, alimentation, etc)"}',
    '\tADDED {"value": "atelier", "label": "Atelier", "description": "Groupe de travail constitué autour d’une activité, d’un thème soutenant le retour à l’emploi"}',
    '\tADDED {"value": "formation", "label": "Formation", "description": "Formation dispensée par des professionnels pour les bénéficiaires"}',
    '\tADDED {"value": "information", "label": "Information", "description": "Premier niveau d’information apporté par des professionnels du secteur"}',
    'count=0 label=ReferenceDatum removed by collection',
    'Import sources',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/sources "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=15 label=ReferenceDatum added by collection',
    '\tADDED {"slug": "action-logement", "nom": "Action Logement", "description": "Aides et solutions pour accompagner les salariés dans leur parcours logement. Contient les services proposés par les structures d’Action Logement sur tout le territoire."}',
    '\tADDED {"slug": "agefiph", "nom": "AGEFIPH", "description": "Association chargée de soutenir le développement de l’emploi des personnes handicapées. Contient leur offre de service nationale."}',
    '\tADDED {"slug": "carif-oref", "nom": "Réseau des CARIF OREF", "description": "Association qui accompagne les acteurs de l’emploi, de la formation et de l’orientation. Contient l’offre de formation FLE et Illettrisme nationale référencée par RCO."}',
    '\tADDED {"slug": "cd35", "nom": "Annuaire social d’Ille-et-Vilaine", "description": "Contient les structures et services inclusifs du département de l’Ille-et-Vilaine."}',
    '\tADDED {"slug": "dora", "nom": "DORA", "description": "Service public numérique de recensement de l’offre d’insertion développé par la Plateforme de l’inclusion. Contient leurs structures et services inclusifs sur de nombreuses thématiques."}',
    '\tADDED {"slug": "emplois-de-linclusion", "nom": "Emplois de l’inclusion", "description": "Service public numérique de mise en relation entre employeurs solidaires et accompagnateurs. Contient les structures employeuses et accompagnatrices dans le domaine de l’insertion par l’activité économique (IAE)."}',
    '\tADDED {"slug": "france-travail", "nom": "Offre nationale de services de France Travail", "description": "Contient l’offre de service nationale de France Travail."}',
    '\tADDED {"slug": "fredo", "nom": "Fredo", "description": "Fredo est un outil diagnostique terrain pour les travailleurs sociaux. Il permet de mettre en relation les bénéficiaires diagnostiqués et les structures d\'accompagnements grâce à une personne ressource."}',
    '\tADDED {"slug": "ma-boussole-aidants", "nom": "Ma Boussole Aidants", "description": "“Ma Boussole Aidants est une coopérative portée par la Fédération Agirc-Arrco dédiée à l’accompagnement des aidants. Contient les CCAS, CIAS, MDS et MDA ainsi que leur offre de service pour les aidants."}',
    '\tADDED {"slug": "mediation-numerique", "nom": "Cartographie Nationale des lieux de médiation numérique", "description": "Contient les lieux d’inclusion numériques recensés par l’ANCT et les hubs régionaux."}',
    '\tADDED {"slug": "mes-aides", "nom": "Mes Aides France Travail", "description": "Service numérique public développé par France Travail. Contient leurs structures et services inclusifs sur la thématique Mobilité."}',
    '\tADDED {"slug": "mission-locale", "nom": "Mission Locale", "description": "La Mission Locale accompagne les jeunes de 16 à 25 ans dans leurs démarches d’insertion sociale et professionnelle en développant une approche globale et de proximité."}',
    '\tADDED {"slug": "monenfant", "nom": "Monenfant.fr", "description": "Service numérique public développé par la Caisse Nationale des Allocations Familiales. Contient leurs structures et services inclusifs sur la thématique Famille."}',
    '\tADDED {"slug": "reseau-alpha", "nom": "Réseau Alpha", "description": "Association référençant l’offre d’apprentissage du français en Île-de-France. Contient leurs structures et services inclusifs sur la thématique Apprendre le Français."}',
    '\tADDED {"slug": "soliguide", "nom": "Soliguide", "description": "Service numérique de recensement de l’offre d’insertion développé par l’association Solinum. Contient leurs structures et services sur des thématiques variées d’urgence sociale."}',
    'count=0 label=ReferenceDatum removed by collection',
    'Importing structures',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/structures?page=1&size=5000 "HTTP/1.1 200 OK"',
    'count=0 label=Structure had the same key in collection and queryset',
    'count=3 label=Structure added by collection',
    '\tADDED {"source": "dora", "id": "dora--cc4e1fbc-533b-46e2-8b33-bc31c33c9ffd", "nom": "PLATEFORME DE L\'INCLUSION", "date_maj": "2024-02-02", "description": "La Plateforme de l’inclusion est un Groupement d’Intérêt Public créé par arrêté en avril 2022. Elle développe de nouveaux services publics pour faciliter la vie des personnes en insertion et de celles et ceux qui les accompagnent.", "lien_source": "https://dora.inclusion.gouv.fr/structures/plateforme-de-linclu", "siret": "13003013300016", "commune": "Paris", "code_postal": "75010", "code_insee": "75056", "adresse": "6 Boulevard Saint-Denis", "complement_adresse": null, "longitude": 2.35511, "latitude": 48.869364, "telephone": null, "courriel": null, "site_web": "https://inclusion.gouv.fr/", "horaires_accueil": null, "accessibilite_lieu": null, "reseaux_porteurs": null}',
    'Structure with uid=dora--cc4e1fbc-533b-46e2-8b33-bc31c33c9ffd without City(code_insee=75056)',
    '\tADDED {"source": "emplois-de-linclusion", "id": "emplois-de-linclusion--empty", "nom": "", "date_maj": "2025-02-14", "description": "", "lien_source": "", "siret": "", "commune": "", "code_postal": "", "code_insee": "", "adresse": "", "complement_adresse": "", "longitude": 0.0, "latitude": 0.0, "telephone": "", "courriel": "", "site_web": "", "horaires_accueil": "", "accessibilite_lieu": "", "reseaux_porteurs": []}',
    '\tADDED {"source": "emplois-de-linclusion", "id": "emplois-de-linclusion--null", "nom": "Nom de la structure \'emplois-de-linclusion--null\'", "date_maj": "2025-02-14", "description": null, "lien_source": null, "siret": null, "commune": null, "code_postal": null, "code_insee": null, "adresse": null, "complement_adresse": null, "longitude": null, "latitude": null, "telephone": null, "courriel": null, "site_web": null, "horaires_accueil": null, "accessibilite_lieu": null, "reseaux_porteurs": null}',
    'count=0 label=Structure removed by collection',
    'Importing services',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/services?page=1&size=5000 "HTTP/1.1 200 OK"',
    'count=0 label=Service had the same key in collection and queryset',
    'count=4 label=Service added by collection',
    '\tADDED {"source": "dora", "structure_id": "dora--cc4e1fbc-533b-46e2-8b33-bc31c33c9ffd", "id": "dora--46f7ea19-c97b-4f45-90a9-027b44cad927", "nom": "Les emplois de l\'inclusion", "description": "## **En tant que prescripteur :**\\n\\n- Vous trouvez les opportunités de travail à destination des publics éloignés de l\'emploi (Contrats d\'insertion, contrats en entreprise adaptée, contrats d\'alternance en Geiq, contrats dans le cadre des clauses d\'insertion…).\\n\\n- Vous orientez vos publics en difficulté auprès des employeurs solidaires et suivez les résultats des candidatures (embauches, refus…).\\n\\n\\n<!-- -->\\n\\n## En tant qu\'employeur solidaire : \\n\\n- Vous publiez vos besoins en recrutement afin de recevoir des candidatures.\\n\\n- Vous disposez d\'un tableau de bord pour gérer vos candidatures et vos embauches.\\n\\n- Dans le cadre des contrats en structure d\'insertion, vous obtenez le PASS IAE afin de faciliter vos démarches liées à l\'aide au poste.\\n\\n\\n<!-- -->\\n\\n## En tant que candidat : \\n\\n- Vous trouvez les employeurs solidaires près de chez vous\\n\\n- Vous pouvez postuler directement auprès des employeurs solidaires ou faire le choix d\'être orienté par votre conseiller à l\'emploi ou accompagnateur social.\\n\\n\\n<!-- -->", "lien_source": "https://dora.inclusion.gouv.fr/services/plateforme-de-linclu-les-emplois-de-lincl", "date_maj": "2026-02-10", "type": "atelier", "thematiques": ["trouver-un-emploi--repondre-a-des-offres-demploi", "trouver-un-emploi--faire-des-candidatures-spontanees"], "frais": "gratuit", "frais_precisions": null, "publics": ["beneficiaires-des-minimas-sociaux", "actifs", "personnes-en-situation-durgence", "personnes-en-situation-de-handicap", "jeunes", "personnes-exilees", "familles", "demandeurs-emploi", "seniors", "femmes"], "publics_precisions": "Public femme en difficulté, Parent isolé, Demandeur d’emploi bénéficiaire des minimas sociaux, Demandeur d’emploi non indemnisé, Demandeur d’emploi en contrat aidé, Bénéficiaire du Revenu de Solidarité Active (RSA), Bénéficiaires de l\'Allocation de Solidarité Spécifique (ASS), Personnes sans hébergement / Hébergées / Ayant un parcours de rue, Personnes arrivées récemment en France, Bénéficiaire de l\'Allocation Adulte Handicapé (AAH), Demandeur d\'emploi avec un projet de créateur/reprise d\'entreprise, Public senior + de 50 ans, Personnes en situation de handicap, Demandeur d\'emploi, Public moins de 26 ans, Jeune de moins de 30 ans inclus, Demandeur d\'emploi indemnisé, Jeunes de 18 à 24 ans, Jeunes sortants de l\'Aide Sociale à l\'Enfance (ASE), Bénéficiaire de l\'obligation d\'emploi des travailleurs handicapés (RQTH, AAH, invalidité...), Travailleur indépendant", "conditions_acces": null, "commune": null, "code_postal": null, "code_insee": null, "adresse": null, "complement_adresse": null, "longitude": null, "latitude": null, "telephone": null, "courriel": "contact.emplois@example.com", "modes_accueil": ["a-distance"], "zone_eligibilite": ["france"], "contact_nom_prenom": "Z... H...", "lien_mobilisation": "https://dora.inclusion.gouv.fr/services/plateforme-de-linclu-les-emplois-de-lincl/orienter", "modes_mobilisation": ["utiliser-lien-mobilisation"], "mobilisable_par": ["professionnels", "usagers"], "mobilisation_precisions": "S\'inscrire et postuler sur https://emplois.inclusion.beta.gouv.fr/ S\'inscrire et postuler sur https://emplois.inclusion.beta.gouv.fr/", "volume_horaire_hebdomadaire": null, "nombre_semaines": null, "horaires_accueil": null}',
    'HTTP Request: GET https://dora-api/api/emplois/services/ "HTTP/1.1 200 OK"',
    '\tADDED {"source": "dora", "structure_id": "dora--cc4e1fbc-533b-46e2-8b33-bc31c33c9ffd", "id": "dora--b6f651e2-56d7-4ffa-a1c6-ae7295089a9e", "nom": "Immersion Facilitée", "description": "Nous proposons un moteur de recherche simple pour trouver et entrer en relation avec une entreprise susceptible d\'accueillir en immersion.\\n\\nNous proposons également un formulaire en ligne pour initier votre demande de convention d\'immersion.\\n\\n[Accéder au service](<https://immersion-facile.beta.gouv.fr/?mtm_campaign=ReferencementIFDORA>)", "lien_source": "https://dora.inclusion.gouv.fr/services/plateforme-de-linclu-immersion-facilitee", "date_maj": "2026-02-13", "type": "formation", "thematiques": ["choisir-un-metier--connaitre-les-opportunites-demploi", "preparer-sa-candidature--valoriser-ses-competences", "choisir-un-metier--identifier-ses-points-forts-et-ses-competences", "choisir-un-metier--confirmer-son-choix-de-metier", "choisir-un-metier--decouvrir-un-metier-ou-un-secteur-dactivite", "trouver-un-emploi--repondre-a-des-offres-demploi"], "frais": "gratuit", "frais_precisions": null, "publics": null, "publics_precisions": null, "conditions_acces": null, "commune": null, "code_postal": null, "code_insee": null, "adresse": null, "complement_adresse": null, "longitude": null, "latitude": null, "telephone": null, "courriel": "contact.if@example.com", "modes_accueil": ["a-distance"], "zone_eligibilite": ["france"], "contact_nom_prenom": null, "lien_mobilisation": "https://dora.inclusion.gouv.fr/services/plateforme-de-linclu-immersion-facilitee/orienter", "modes_mobilisation": ["utiliser-lien-mobilisation"], "mobilisable_par": ["professionnels", "usagers"], "mobilisation_precisions": "https://immersion-facile.beta.gouv.fr/?mtm_campaign=ReferencementIFDORA https://immersion-facile.beta.gouv.fr/?mtm_campaign=ReferencementIFDORA", "volume_horaire_hebdomadaire": null, "nombre_semaines": null, "horaires_accueil": null}',
    '\tADDED {"source": "emplois-de-linclusion", "structure_id": "emplois-de-linclusion--empty", "id": "emplois-de-linclusion--empty", "nom": "", "description": "", "lien_source": "", "date_maj": "2026-02-10", "type": null, "thematiques": [], "frais": null, "frais_precisions": "", "publics": [], "publics_precisions": "", "conditions_acces": "", "commune": "", "code_postal": "", "code_insee": "", "adresse": "", "complement_adresse": "", "longitude": 0.0, "latitude": 0.0, "telephone": "", "courriel": "", "modes_accueil": [], "zone_eligibilite": [], "contact_nom_prenom": "", "lien_mobilisation": "", "modes_mobilisation": [], "mobilisable_par": [], "mobilisation_precisions": "", "volume_horaire_hebdomadaire": "", "nombre_semaines": 0, "horaires_accueil": ""}',
    'HTTP Request: GET https://dora-api/api/emplois/disabled-dora-form-di-structures/ "HTTP/1.1 200 OK"',
    '\tADDED {"source": "emplois-de-linclusion", "structure_id": "emplois-de-linclusion--null", "id": "emplois-de-linclusion--null", "nom": "Nom du service \'emplois-de-linclusion-null\'", "description": "Description du service \'emplois-de-linclusion-null\'", "lien_source": null, "date_maj": "2026-02-10", "type": null, "thematiques": null, "frais": null, "frais_precisions": null, "publics": null, "publics_precisions": null, "conditions_acces": null, "commune": null, "code_postal": null, "code_insee": null, "adresse": null, "complement_adresse": null, "longitude": null, "latitude": null, "telephone": null, "courriel": null, "modes_accueil": null, "zone_eligibilite": null, "contact_nom_prenom": null, "lien_mobilisation": null, "modes_mobilisation": null, "mobilisable_par": null, "mobilisation_precisions": null, "volume_horaire_hebdomadaire": null, "nombre_semaines": null, "horaires_accueil": null}',
    'count=0 label=Service removed by collection',
    'Import additional informations from DORA',
    "Change 'is_orientable_with_form' ('True' -> 'False') for count=0 services based on count=2 structures",
    'count=2 label=Service had the same key in collection and queryset',
    'count=0 label=Service added by collection',
    'count=0 label=Service removed by collection',
    'Setting transaction to be rollback as wet_run=False',
  ])
# ---
# name: test_full_import_idempotence[logs]
  list([
    'Importing references data',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/frais "HTTP/1.1 200 OK"',
    'count=2 label=ReferenceDatum had the same key in collection and queryset',
    'count=0 label=ReferenceDatum added by collection',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/modes-accueil "HTTP/1.1 200 OK"',
    'count=2 label=ReferenceDatum had the same key in collection and queryset',
    'count=0 label=ReferenceDatum added by collection',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/modes-mobilisation "HTTP/1.1 200 OK"',
    'count=4 label=ReferenceDatum had the same key in collection and queryset',
    'count=0 label=ReferenceDatum added by collection',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/personnes-mobilisatrices "HTTP/1.1 200 OK"',
    'count=2 label=ReferenceDatum had the same key in collection and queryset',
    'count=0 label=ReferenceDatum added by collection',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/publics "HTTP/1.1 200 OK"',
    'count=14 label=ReferenceDatum had the same key in collection and queryset',
    'count=0 label=ReferenceDatum added by collection',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/reseaux-porteurs "HTTP/1.1 200 OK"',
    'count=107 label=ReferenceDatum had the same key in collection and queryset',
    'count=0 label=ReferenceDatum added by collection',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/thematiques "HTTP/1.1 200 OK"',
    'count=69 label=ReferenceDatum had the same key in collection and queryset',
    'count=0 label=ReferenceDatum added by collection',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/types-services "HTTP/1.1 200 OK"',
    'count=6 label=ReferenceDatum had the same key in collection and queryset',
    'count=0 label=ReferenceDatum added by collection',
    'count=0 label=ReferenceDatum removed by collection',
    'Import sources',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/sources "HTTP/1.1 200 OK"',
    'count=15 label=ReferenceDatum had the same key in collection and queryset',
    'count=0 label=ReferenceDatum added by collection',
    'count=0 label=ReferenceDatum removed by collection',
    'Importing structures',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/structures?page=1&size=5000 "HTTP/1.1 200 OK"',
    'count=3 label=Structure had the same key in collection and queryset',
    'count=0 label=Structure added by collection',
    'count=0 label=Structure removed by collection',
    'Importing services',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/services?page=1&size=5000 "HTTP/1.1 200 OK"',
    'count=4 label=Service had the same key in collection and queryset',
    'count=0 label=Service added by collection',
    'count=0 label=Service removed by collection',
    'Import additional informations from DORA',
    'HTTP Request: GET https://dora-api/api/emplois/disabled-dora-form-di-structures/ "HTTP/1.1 200 OK"',
    "Change 'is_orientable_with_form' ('True' -> 'False') for count=0 services based on count=2 structures",
    'HTTP Request: GET https://dora-api/api/emplois/services/ "HTTP/1.1 200 OK"',
    'count=2 label=Service had the same key in collection and queryset',
    'count=0 label=Service added by collection',
    'count=0 label=Service removed by collection',
  ])
# ---
# name: test_full_import_wet_run[logs]
  list([
    'Importing references data',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/frais "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=2 label=ReferenceDatum added by collection',
    '\tADDED {"value": "gratuit", "label": "Gratuit", "description": "L’accès au lieu et/ou à ses services est gratuit"}',
    '\tADDED {"value": "payant", "label": "Payant", "description": "L’accès au lieu et/ou à ses services est payant"}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/modes-accueil "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=2 label=ReferenceDatum added by collection',
    '\tADDED {"value": "a-distance", "label": "À distance", "description": "Le service est proposé à distance, par téléphone ou internet."}',
    '\tADDED {"value": "en-presentiel", "label": "En présentiel", "description": "Le service est proposé en présentiel, à l’adresse associée à ce service."}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/modes-mobilisation "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=4 label=ReferenceDatum added by collection',
    '\tADDED {"value": "envoyer-un-courriel", "label": "Envoyer un courriel", "description": "Envoyer un courriel à l’adresse électronique associée au service, ou à défaut, à la structure."}',
    '\tADDED {"value": "se-presenter", "label": "Se présenter", "description": "Se présenter directement à l’adresse associée au service ou, à défaut, à la structure."}',
    '\tADDED {"value": "telephoner", "label": "Téléphoner", "description": "Téléphoner au numéro associé au service, ou à défaut, à la structure."}',
    '\tADDED {"value": "utiliser-lien-mobilisation", "label": "Utiliser le lien de mobilisation", "description": "Utiliser le lien de mobilisation du service."}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/personnes-mobilisatrices "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=2 label=ReferenceDatum added by collection',
    '\tADDED {"value": "professionnels", "label": "Professionnels", "description": "Service mobilisable par les professionnels de l’insertion."}',
    '\tADDED {"value": "usagers", "label": "Usagers", "description": "Service mobilisable par les usagers."}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/publics "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=14 label=ReferenceDatum added by collection',
    '\tADDED {"value": "actifs", "label": "Actifs", "description": "Toute personne ayant un emploi, qu’il soit salarié, libéral ou à son compte"}',
    '\tADDED {"value": "beneficiaires-des-minimas-sociaux", "label": "Bénéficiaires des minimas sociaux", "description": "Personnes touchant des aides financières telles que RSA, SMIC, allocations familiales, bourses, etc"}',
    '\tADDED {"value": "demandeurs-emploi", "label": "Demandeurs d’emploi", "description": "Demandeurs d’emploi de tout type"}',
    '\tADDED {"value": "etudiants", "label": "Étudiants", "description": "Étudiants"}',
    '\tADDED {"value": "familles", "label": "Familles", "description": "Familles, parents, enfants, etc"}',
    '\tADDED {"value": "femmes", "label": "Femmes", "description": "Femmes isolées, victimes de violence, etc"}',
    '\tADDED {"value": "jeunes", "label": "Jeunes", "description": "Jeunes au sens large, jeunes adultes, adolescents, etc"}',
    '\tADDED {"value": "personnes-en-situation-de-handicap", "label": "Personnes en situation de handicap", "description": "Personnes en situation de handicap de tout type"}',
    '\tADDED {"value": "personnes-en-situation-durgence", "label": "Personnes en situation d’urgence", "description": "SDF, victimes de violence, grande précarité, etc"}',
    '\tADDED {"value": "personnes-en-situation-juridique-specifique", "label": "Personnes en situation juridique spécifique", "description": "Personnes sortant de détention, détenus ou autre statut juridique spécifique"}',
    '\tADDED {"value": "personnes-exilees", "label": "Personnes exilées", "description": "Réfugiés, demandeurs d’asile, personnes immigrées, etc"}',
    '\tADDED {"value": "residents-qpv-frr", "label": "Résidents en QPV ou FRR", "description": "Personnes résidentes en zone Quartier Prioritaire de la Ville ou France Ruralités Revitalisation (anciennement ZRR)"}',
    '\tADDED {"value": "seniors", "label": "Séniors", "description": "Personnes âgées, retraités, etc"}',
    '\tADDED {"value": "tous-publics", "label": "Tous publics", "description": "Tous publics"}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/reseaux-porteurs "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=107 label=ReferenceDatum added by collection',
    '\tADDED {"value": "60000-rebonds", "label": "60 000 Rebonds", "description": null}',
    '\tADDED {"value": "aci", "label": "Structures d’Insertion par l’Activité Économique - Ateliers et Chantiers d’Insertion", "description": null}',
    '\tADDED {"value": "action-logement", "label": "Action Logement", "description": null}',
    '\tADDED {"value": "adie", "label": "Association pour le Droit à l’Initiative Économique", "description": null}',
    '\tADDED {"value": "afpa", "label": "Agence Nationale pour la Formation Professionnelle des Adultes", "description": null}',
    '\tADDED {"value": "agefiph", "label": "Agefiph", "description": null}',
    '\tADDED {"value": "ai", "label": "Associations Intermédiaires", "description": null}',
    '\tADDED {"value": "aidants-connect", "label": "Aidants Connect", "description": null}',
    '\tADDED {"value": "alliance-villes-emploi", "label": "Alliance Villes Emploi", "description": null}',
    '\tADDED {"value": "anlci", "label": "Agence Nationale de Lutte Contre l’Illettrisme", "description": null}',
    '\tADDED {"value": "apprentis-dauteuil", "label": "Apprentis d’Auteuil", "description": null}',
    '\tADDED {"value": "ase", "label": "Aide Sociale à l’Enfance", "description": null}',
    '\tADDED {"value": "banques-alimentaires", "label": "Banques Alimentaires", "description": null}',
    '\tADDED {"value": "caarud", "label": "Centres d’Accueil et d’Accompagnement à la Réduction de Risques pour Usagers de Drogues", "description": null}',
    '\tADDED {"value": "cada", "label": "Centres d’Accueil de Demandeurs d’Asile", "description": null}',
    '\tADDED {"value": "caf", "label": "Caisse d’Allocations Familiales", "description": null}',
    '\tADDED {"value": "campus-connecte", "label": "Campus Connecté", "description": null}',
    '\tADDED {"value": "cap-emploi-reseau-cheops", "label": "CAP Emploi - Réseau CHEOPS", "description": null}',
    '\tADDED {"value": "cava", "label": "Centres d’Adaptation à la Vie Active", "description": null}',
    '\tADDED {"value": "ccas-cias", "label": "Les Centres Communaux d’Action Sociale et les Centres Intercommunaux d’Action Sociale", "description": null}',
    '\tADDED {"value": "chambres-consulaires", "label": "Chambres Consulaires", "description": "Les Chambres de Commerce et d’Industrie (CCI), les Chambres des Métiers et de l’Artisanat (CMA) et les Chambres d’Agriculture (CA)."}',
    '\tADDED {"value": "chantier-ecole", "label": "Réseau Chantier École", "description": null}',
    '\tADDED {"value": "chrs", "label": "Centres d’Hébergement et de Réinsertion Sociale", "description": null}',
    '\tADDED {"value": "chu", "label": "Centres d’Hébergement d’Urgence", "description": null}',
    '\tADDED {"value": "cidff", "label": "Centres d’Information sur les Droits des Femmes et des Familles", "description": null}',
    '\tADDED {"value": "cmp", "label": "Centres Médico-Psychologiques", "description": null}',
    '\tADDED {"value": "cms", "label": "Centres Médico-Sociaux", "description": null}',
    '\tADDED {"value": "cnam", "label": "Conservatoire National des Arts et Métiers", "description": null}',
    '\tADDED {"value": "collectif-emploi", "label": "Collectif Emploi", "description": null}',
    '\tADDED {"value": "communes", "label": "Communes, mairies, communautés de communes, etc.", "description": null}',
    '\tADDED {"value": "conseillers-numeriques", "label": "Conseillers Numériques", "description": null}',
    '\tADDED {"value": "coorace", "label": "Fédération COORACE", "description": null}',
    '\tADDED {"value": "cpam", "label": "Caisses Primaires d’Assurance Maladie", "description": null}',
    '\tADDED {"value": "cph", "label": "Centres Provisoires d’Hébergement", "description": null}',
    '\tADDED {"value": "creches-avip", "label": "Crèches à Vocation d’Insertion Professionnelle", "description": null}',
    '\tADDED {"value": "crepi", "label": "CREPI", "description": null}',
    '\tADDED {"value": "cresus", "label": "Fédération Française des Associations CRÉSUS", "description": null}',
    '\tADDED {"value": "croix-rouge", "label": "Croix-Rouge", "description": null}',
    '\tADDED {"value": "csapa", "label": "Centres de Soins, d’Accompagnement et de Prévention en Addictologie", "description": null}',
    '\tADDED {"value": "delegataire-conseil-departemental", "label": "Organisation délégataire d’un Conseil Départemental", "description": null}',
    '\tADDED {"value": "departements", "label": "Départements et Services Départementaux", "description": "Les Conseils Départementaux (CD), les Maisons Départementales pour les Personnes Handicapées (MDPH), les Unions Départementales des Associations Familiales (UDAF), les Centres Départementaux d’Action Sociale (CDAS), etc."}',
    '\tADDED {"value": "duo-for-a-job", "label": "DUO for a JOB", "description": null}',
    '\tADDED {"value": "ea", "label": "Entreprises Adaptées", "description": null}',
    '\tADDED {"value": "eatt", "label": "Entreprises Adaptées de Travail Temporaire", "description": null}',
    '\tADDED {"value": "ecoles-de-la-deuxieme-chance", "label": "Écoles de la 2ᵉ Chance", "description": null}',
    '\tADDED {"value": "egee", "label": "Association EGEE", "description": null}',
    '\tADDED {"value": "ei", "label": "Structures d’Insertion par l’Activité Économique - Entreprises d’Insertion", "description": null}',
    '\tADDED {"value": "eiti", "label": "Structures d’Insertion par l’Activité Économique - Entreprises d’Insertion par le Travail Indépendant", "description": null}',
    '\tADDED {"value": "emmaus", "label": "Emmaüs", "description": null}',
    '\tADDED {"value": "epide", "label": "EPIDE", "description": null}',
    '\tADDED {"value": "esat", "label": "Établissement et Service d’Accompagnement par le Travail", "description": null}',
    '\tADDED {"value": "espaces-publics-numeriques", "label": "Espaces Publics Numériques", "description": null}',
    '\tADDED {"value": "etcld", "label": "Expérimentation Territoriale contre le Chômage de Longue Durée", "description": null}',
    '\tADDED {"value": "etti", "label": "Structures d’Insertion par l’Activité Économique - Entreprises de Travail Temporaire d’Insertion", "description": null}',
    '\tADDED {"value": "fabrique-de-territoire", "label": "Fabrique de Territoire", "description": null}',
    '\tADDED {"value": "face", "label": "Fondation FACE", "description": null}',
    '\tADDED {"value": "fcsf", "label": "Fédération des Centres Sociaux et Socioculturels de France", "description": null}',
    '\tADDED {"value": "federation-des-acteurs-de-la-solidarite", "label": "Fédération des Acteurs de la Solidarité", "description": null}',
    '\tADDED {"value": "federation-professionnelle-femmes", "label": "Fédération Professionnelle pour les Femmes", "description": null}',
    '\tADDED {"value": "france-active", "label": "France Active", "description": null}',
    '\tADDED {"value": "france-service", "label": "France Service", "description": null}',
    '\tADDED {"value": "france-travail", "label": "France Travail", "description": null}',
    '\tADDED {"value": "french-tech", "label": "French Tech", "description": null}',
    '\tADDED {"value": "geiq", "label": "GEIQ", "description": null}',
    '\tADDED {"value": "grandes-ecoles-du-numerique", "label": "Grandes Écoles du Numérique", "description": null}',
    '\tADDED {"value": "huda", "label": "Hébergement d’Urgence pour Demandeurs d’Asile", "description": null}',
    '\tADDED {"value": "hup", "label": "Association H’UP", "description": null}',
    '\tADDED {"value": "inae", "label": "INAÉ Nouvelle Aquitaine", "description": null}',
    '\tADDED {"value": "initiative-france", "label": "Initiative France", "description": null}',
    '\tADDED {"value": "konexio", "label": "Association Konexio", "description": null}',
    '\tADDED {"value": "la-cravate-solidaire", "label": "La Cravate Solidaire", "description": null}',
    '\tADDED {"value": "la-poste", "label": "La Poste", "description": null}',
    '\tADDED {"value": "les-premieres", "label": "Les Premières", "description": null}',
    '\tADDED {"value": "maison-departementale-de-lautonomie", "label": "Maisons Départementales de l’Autonomie", "description": null}',
    '\tADDED {"value": "maisons-de-l-emploi", "label": "Maisons de l’Emploi", "description": null}',
    '\tADDED {"value": "maisons-des-solidarites", "label": "Maisons Départementales des Solidarités (MDS)", "description": "Les Maisons Départementales des Solidarités sont des services départementaux. Par conséquent, le réseau `departements` devrait être également défini pour ces structures."}',
    '\tADDED {"value": "mission-locale", "label": "Mission Locale", "description": null}',
    '\tADDED {"value": "mjc", "label": "Maisons des Jeunes et de la Culture", "description": null}',
    '\tADDED {"value": "mobin", "label": "Mob’In", "description": null}',
    '\tADDED {"value": "msap", "label": "Maisons de Services Au Public", "description": null}',
    '\tADDED {"value": "mutualite-sociale-agricole", "label": "Mutualité Sociale Agricole", "description": null}',
    '\tADDED {"value": "nqt", "label": "Association NQT", "description": null}',
    '\tADDED {"value": "pimms-mediation", "label": "Point Information Médiation Multi Services", "description": null}',
    '\tADDED {"value": "pjj", "label": "Protection Judiciaire de la Jeunesse", "description": null}',
    '\tADDED {"value": "plie", "label": "Plans Locaux pour l’Insertion et l’Emploi", "description": null}',
    '\tADDED {"value": "points-conseil-budget", "label": "Points Conseil Budget", "description": null}',
    '\tADDED {"value": "points-justice", "label": "Points Justice", "description": null}',
    '\tADDED {"value": "positive-planet", "label": "Positive Planet", "description": null}',
    '\tADDED {"value": "regions", "label": "Régions, Préfectures et services régionaux", "description": "Les Conseils Régionaux (CR), les préfectures, les Directions Régionales de l’Économie, de l’Emploi, du Travail et desSolidarités (DREETS), etc."}',
    '\tADDED {"value": "reseau-app", "label": "Réseau APP", "description": null}',
    '\tADDED {"value": "reseau-bge", "label": "Réseau BGE", "description": null}',
    '\tADDED {"value": "reseau-entreprendre", "label": "Réseau Entreprendre", "description": null}',
    '\tADDED {"value": "reseau-information-jeunesse", "label": "Réseau Information Jeunesse", "description": null}',
    '\tADDED {"value": "residences-fjt", "label": "Résidences - Foyers Jeunes Travailleurs", "description": null}',
    '\tADDED {"value": "ressourceries", "label": "Ressourceries", "description": null}',
    '\tADDED {"value": "restos-du-coeur", "label": "Restos du Coeur", "description": null}',
    '\tADDED {"value": "secours-populaire", "label": "Secours Populaire", "description": null}',
    '\tADDED {"value": "siao", "label": "Services Intégrés d’Accueil et d’Orientation", "description": null}',
    '\tADDED {"value": "simplon", "label": "Simplon", "description": null}',
    '\tADDED {"value": "singa", "label": "Association SINGA", "description": null}',
    '\tADDED {"value": "snc", "label": "Solidarité Nouvelle Face au Chômage", "description": null}',
    '\tADDED {"value": "spip", "label": "Services Pénitentiaires d’Insertion et de Probation", "description": null}',
    '\tADDED {"value": "tous-tes-possibles", "label": "Tous Tes Possibles", "description": null}',
    '\tADDED {"value": "unaf", "label": "Union Nationale de l’Aide aux Familles", "description": null}',
    '\tADDED {"value": "unea", "label": "Union Nationale des Entreprises Adaptées", "description": null}',
    '\tADDED {"value": "unis-cite", "label": "UnisCité", "description": null}',
    '\tADDED {"value": "wimoov", "label": "Wimoov", "description": null}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/thematiques "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=69 label=ReferenceDatum added by collection',
    '\tADDED {"value": "choisir-un-metier--confirmer-son-choix-de-metier", "label": "Confirmer son choix de métier", "description": null}',
    '\tADDED {"value": "choisir-un-metier--connaitre-les-opportunites-demploi", "label": "Connaître les opportunités d’emploi", "description": null}',
    '\tADDED {"value": "choisir-un-metier--decouvrir-un-metier-ou-un-secteur-dactivite", "label": "Découvrir un métier ou un secteur d’activité", "description": null}',
    '\tADDED {"value": "choisir-un-metier--identifier-ses-points-forts-et-ses-competences", "label": "Identifier ses points forts et ses compétences", "description": null}',
    '\tADDED {"value": "creer-une-entreprise--definir-son-projet-de-creation-dentreprise", "label": "Définir son projet de création d’entreprise", "description": null}',
    '\tADDED {"value": "creer-une-entreprise--developper-son-entreprise", "label": "Développer son entreprise", "description": null}',
    '\tADDED {"value": "creer-une-entreprise--structurer-son-projet-de-creation-dentreprise", "label": "Structurer son projet de création d’entreprise", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--accompagnement-aux-demarches-administratives", "label": "Accompagnement aux démarches administratives", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--accompagnement-pour-lacces-a-la-citoyennete", "label": "Accompagnement pour l’accès à la citoyenneté", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--accompagnement-pour-lacces-aux-droits", "label": "Accompagnement pour l’accès aux droits", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--beneficier-dune-mesure-daccompagnement-adapte", "label": "Bénéficier d’une mesure d’accompagnement adapté", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--connaitre-ses-droits-face-a-une-discrimination", "label": "Connaître ses droits face à une discrimination", "description": null}',
    '\tADDED {"value": "difficultes-administratives-ou-juridiques--prendre-en-compte-une-problematique-judiciaire", "label": "Prendre en compte une problématique judiciaire", "description": null}',
    '\tADDED {"value": "difficultes-financieres--acquerir-une-autonomie-budgetaire", "label": "Acquérir une autonomie budgétaire", "description": null}',
    '\tADDED {"value": "difficultes-financieres--ameliorer-sa-gestion-budgetaire", "label": "Améliorer sa gestion budgétaire", "description": null}',
    '\tADDED {"value": "difficultes-financieres--mettre-en-place-une-mesure-de-protection-financiere", "label": "Mettre en place une mesure de protection financière", "description": null}',
    '\tADDED {"value": "difficultes-financieres--prevenir-une-degradation-de-la-situation-financiere", "label": "Prévenir une dégradation de la situation financière", "description": null}',
    '\tADDED {"value": "difficultes-financieres--situation-dendettement-surendettement", "label": "Situation d’endettement ou de surendettement", "description": null}',
    '\tADDED {"value": "equipement-et-alimentation--aide-menagere", "label": "Aide ménagère", "description": null}',
    '\tADDED {"value": "equipement-et-alimentation--alimentation", "label": "Alimentation", "description": null}',
    '\tADDED {"value": "equipement-et-alimentation--electromenager", "label": "Électroménager", "description": null}',
    '\tADDED {"value": "equipement-et-alimentation--habillement", "label": "Habillement", "description": null}',
    '\tADDED {"value": "famille--garde-denfants", "label": "Garde d’enfants", "description": null}',
    '\tADDED {"value": "famille--prise-en-charge-personne-dependante", "label": "Prise en charge d’une personne dépendante", "description": null}',
    '\tADDED {"value": "famille--soutien-a-la-parentalite-et-a-leducation", "label": "Soutien à la parentalité et à l’éducation", "description": null}',
    '\tADDED {"value": "famille--soutien-aidants", "label": "Soutien aux aidants", "description": null}',
    '\tADDED {"value": "famille--surmonter-conflits-separation-violence", "label": "Surmonter les conflits liés à la séparation ou à la violence", "description": null}',
    '\tADDED {"value": "lecture-ecriture-calcul--maitriser-le-calcul", "label": "Maîtriser le calcul", "description": null}',
    '\tADDED {"value": "lecture-ecriture-calcul--maitriser-le-francais", "label": "Maîtriser le français", "description": null}',
    '\tADDED {"value": "logement-hebergement--acheter-un-logement", "label": "Acheter un logement", "description": null}',
    '\tADDED {"value": "logement-hebergement--changer-de-logement", "label": "Changer de logement", "description": null}',
    '\tADDED {"value": "logement-hebergement--louer-un-logement", "label": "Louer un logement", "description": null}',
    '\tADDED {"value": "logement-hebergement--rechercher-une-solution-dhebergement-temporaire", "label": "Rechercher une solution d’hébergement temporaire", "description": null}',
    '\tADDED {"value": "logement-hebergement--reduire-les-impayes-de-loyer", "label": "Réduire les impayés de loyer", "description": null}',
    '\tADDED {"value": "logement-hebergement--se-maintenir-dans-le-logement", "label": "Se maintenir dans le logement", "description": null}',
    '\tADDED {"value": "logement-hebergement--sinformer-sur-les-demarches-liees-a-lacces-au-logement", "label": "S’informer sur les démarches liées à l’accès au logement", "description": null}',
    '\tADDED {"value": "mobilite--acceder-a-un-vehicule", "label": "Accéder à un véhicule", "description": null}',
    '\tADDED {"value": "mobilite--entretenir-reparer-son-vehicule", "label": "Entretenir et réparer son véhicule", "description": null}',
    '\tADDED {"value": "mobilite--etre-accompagne-dans-son-parcours-mobilite", "label": "Être accompagné dans son parcours mobilité", "description": null}',
    '\tADDED {"value": "mobilite--financer-ma-mobilite", "label": "Financer ma mobilité", "description": null}',
    '\tADDED {"value": "mobilite--mobilite-douce-partagee-collective", "label": "Utiliser des services de mobilité douce, partagée ou collective", "description": null}',
    '\tADDED {"value": "mobilite--preparer-un-permis", "label": "Préparer un permis", "description": null}',
    '\tADDED {"value": "numerique--acceder-a-des-services-en-ligne", "label": "Accéder à des services en ligne", "description": null}',
    '\tADDED {"value": "numerique--acceder-a-une-connexion-internet", "label": "Accéder à une connexion Internet", "description": null}',
    '\tADDED {"value": "numerique--acquerir-un-equipement", "label": "Acquérir un équipement", "description": null}',
    '\tADDED {"value": "numerique--maitriser-les-fondamentaux-du-numerique", "label": "Maîtriser les fondamentaux du numérique", "description": null}',
    '\tADDED {"value": "preparer-sa-candidature--developper-son-reseau", "label": "Développer son réseau", "description": null}',
    '\tADDED {"value": "preparer-sa-candidature--organiser-ses-demarches-de-recherche-demploi", "label": "Organiser ses démarches de recherche d’emploi", "description": null}',
    '\tADDED {"value": "preparer-sa-candidature--realiser-un-cv-et-ou-une-lettre-de-motivation", "label": "Réaliser un CV et/ou une lettre de motivation", "description": null}',
    '\tADDED {"value": "preparer-sa-candidature--valoriser-ses-competences", "label": "Valoriser ses compétences", "description": null}',
    '\tADDED {"value": "remobilisation--activites-sportives-et-culturelles", "label": "Activités sportives et culturelles", "description": null}',
    '\tADDED {"value": "remobilisation--benevolat-action-citoyenne", "label": "Bénévolat et action citoyenne", "description": null}',
    '\tADDED {"value": "remobilisation--bien-etre-confiance-en-soi", "label": "Bien-être et confiance en soi", "description": null}',
    '\tADDED {"value": "remobilisation--lien-social", "label": "Lien social", "description": null}',
    '\tADDED {"value": "sante--acces-aux-soins", "label": "Accès aux soins", "description": null}',
    '\tADDED {"value": "sante--addictions", "label": "Addictions", "description": null}',
    '\tADDED {"value": "sante--constituer-un-dossier-mdph-invalidite", "label": "Constituer un dossier MDPH pour invalidité", "description": null}',
    '\tADDED {"value": "sante--sante-mentale", "label": "Santé mentale", "description": null}',
    '\tADDED {"value": "sante--sante-sexuelle", "label": "Santé sexuelle", "description": null}',
    '\tADDED {"value": "se-former--monter-son-dossier-de-formation", "label": "Monter son dossier de formation", "description": null}',
    '\tADDED {"value": "se-former--trouver-sa-formation", "label": "Trouver sa formation", "description": null}',
    '\tADDED {"value": "souvrir-a-linternational--connaitre-les-opportunites-demploi-a-letranger", "label": "Connaître les opportunités d’emploi à l’étranger", "description": null}',
    '\tADDED {"value": "souvrir-a-linternational--sinformer-sur-les-aides-pour-travailler-a-letranger", "label": "S’informer sur les aides pour travailler à l’étranger", "description": null}',
    '\tADDED {"value": "souvrir-a-linternational--sorganiser-suite-a-son-retour-en-france", "label": "S’organiser suite à son retour en France", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--convaincre-un-recruteur-en-entretien", "label": "Convaincre un recruteur en entretien", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--faire-des-candidatures-spontanees", "label": "Faire des candidatures spontanées", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--maintien-dans-lemploi", "label": "Maintien dans l’emploi", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--repondre-a-des-offres-demploi", "label": "Répondre à des offres d’emploi", "description": null}',
    '\tADDED {"value": "trouver-un-emploi--suivre-ses-candidatures-et-relancer-les-employeurs", "label": "Suivre ses candidatures et relancer les employeurs", "description": null}',
    'count=0 label=ReferenceDatum removed by collection',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/doc/types-services "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=6 label=ReferenceDatum added by collection',
    '\tADDED {"value": "accompagnement", "label": "Accompagnement", "description": "Accompagnement global pour le retour à l’emploi"}',
    '\tADDED {"value": "aide-financiere", "label": "Aide financière", "description": "Prise en charge financière, aide ou rémunération soutenant le retour à l’emploi"}',
    '\tADDED {"value": "aide-materielle", "label": "Aide materielle", "description": "Accéder à du matériel soutenant le retour à l’emploi (voiture, vélo, ordinateur, alimentation, etc)"}',
    '\tADDED {"value": "atelier", "label": "Atelier", "description": "Groupe de travail constitué autour d’une activité, d’un thème soutenant le retour à l’emploi"}',
    '\tADDED {"value": "formation", "label": "Formation", "description": "Formation dispensée par des professionnels pour les bénéficiaires"}',
    '\tADDED {"value": "information", "label": "Information", "description": "Premier niveau d’information apporté par des professionnels du secteur"}',
    'count=0 label=ReferenceDatum removed by collection',
    'Import sources',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/sources "HTTP/1.1 200 OK"',
    'count=0 label=ReferenceDatum had the same key in collection and queryset',
    'count=15 label=ReferenceDatum added by collection',
    '\tADDED {"slug": "action-logement", "nom": "Action Logement", "description": "Aides et solutions pour accompagner les salariés dans leur parcours logement. Contient les services proposés par les structures d’Action Logement sur tout le territoire."}',
    '\tADDED {"slug": "agefiph", "nom": "AGEFIPH", "description": "Association chargée de soutenir le développement de l’emploi des personnes handicapées. Contient leur offre de service nationale."}',
    '\tADDED {"slug": "carif-oref", "nom": "Réseau des CARIF OREF", "description": "Association qui accompagne les acteurs de l’emploi, de la formation et de l’orientation. Contient l’offre de formation FLE et Illettrisme nationale référencée par RCO."}',
    '\tADDED {"slug": "cd35", "nom": "Annuaire social d’Ille-et-Vilaine", "description": "Contient les structures et services inclusifs du département de l’Ille-et-Vilaine."}',
    '\tADDED {"slug": "dora", "nom": "DORA", "description": "Service public numérique de recensement de l’offre d’insertion développé par la Plateforme de l’inclusion. Contient leurs structures et services inclusifs sur de nombreuses thématiques."}',
    '\tADDED {"slug": "emplois-de-linclusion", "nom": "Emplois de l’inclusion", "description": "Service public numérique de mise en relation entre employeurs solidaires et accompagnateurs. Contient les structures employeuses et accompagnatrices dans le domaine de l’insertion par l’activité économique (IAE)."}',
    '\tADDED {"slug": "france-travail", "nom": "Offre nationale de services de France Travail", "description": "Contient l’offre de service nationale de France Travail."}',
    '\tADDED {"slug": "fredo", "nom": "Fredo", "description": "Fredo est un outil diagnostique terrain pour les travailleurs sociaux. Il permet de mettre en relation les bénéficiaires diagnostiqués et les structures d\'accompagnements grâce à une personne ressource."}',
    '\tADDED {"slug": "ma-boussole-aidants", "nom": "Ma Boussole Aidants", "description": "“Ma Boussole Aidants est une coopérative portée par la Fédération Agirc-Arrco dédiée à l’accompagnement des aidants. Contient les CCAS, CIAS, MDS et MDA ainsi que leur offre de service pour les aidants."}',
    '\tADDED {"slug": "mediation-numerique", "nom": "Cartographie Nationale des lieux de médiation numérique", "description": "Contient les lieux d’inclusion numériques recensés par l’ANCT et les hubs régionaux."}',
    '\tADDED {"slug": "mes-aides", "nom": "Mes Aides France Travail", "description": "Service numérique public développé par France Travail. Contient leurs structures et services inclusifs sur la thématique Mobilité."}',
    '\tADDED {"slug": "mission-locale", "nom": "Mission Locale", "description": "La Mission Locale accompagne les jeunes de 16 à 25 ans dans leurs démarches d’insertion sociale et professionnelle en développant une approche globale et de proximité."}',
    '\tADDED {"slug": "monenfant", "nom": "Monenfant.fr", "description": "Service numérique public développé par la Caisse Nationale des Allocations Familiales. Contient leurs structures et services inclusifs sur la thématique Famille."}',
    '\tADDED {"slug": "reseau-alpha", "nom": "Réseau Alpha", "description": "Association référençant l’offre d’apprentissage du français en Île-de-France. Contient leurs structures et services inclusifs sur la thématique Apprendre le Français."}',
    '\tADDED {"slug": "soliguide", "nom": "Soliguide", "description": "Service numérique de recensement de l’offre d’insertion développé par l’association Solinum. Contient leurs structures et services sur des thématiques variées d’urgence sociale."}',
    'count=0 label=ReferenceDatum removed by collection',
    'Importing structures',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/structures?page=1&size=5000 "HTTP/1.1 200 OK"',
    'count=0 label=Structure had the same key in collection and queryset',
    'count=3 label=Structure added by collection',
    '\tADDED {"source": "dora", "id": "dora--cc4e1fbc-533b-46e2-8b33-bc31c33c9ffd", "nom": "PLATEFORME DE L\'INCLUSION", "date_maj": "2024-02-02", "description": "La Plateforme de l’inclusion est un Groupement d’Intérêt Public créé par arrêté en avril 2022. Elle développe de nouveaux services publics pour faciliter la vie des personnes en insertion et de celles et ceux qui les accompagnent.", "lien_source": "https://dora.inclusion.gouv.fr/structures/plateforme-de-linclu", "siret": "13003013300016", "commune": "Paris", "code_postal": "75010", "code_insee": "75056", "adresse": "6 Boulevard Saint-Denis", "complement_adresse": null, "longitude": 2.35511, "latitude": 48.869364, "telephone": null, "courriel": null, "site_web": "https://inclusion.gouv.fr/", "horaires_accueil": null, "accessibilite_lieu": null, "reseaux_porteurs": null}',
    'Structure with uid=dora--cc4e1fbc-533b-46e2-8b33-bc31c33c9ffd without City(code_insee=75056)',
    '\tADDED {"source": "emplois-de-linclusion", "id": "emplois-de-linclusion--empty", "nom": "", "date_maj": "2025-02-14", "description": "", "lien_source": "", "siret": "", "commune": "", "code_postal": "", "code_insee": "", "adresse": "", "complement_adresse": "", "longitude": 0.0, "latitude": 0.0, "telephone": "", "courriel": "", "site_web": "", "horaires_accueil": "", "accessibilite_lieu": "", "reseaux_porteurs": []}',
    '\tADDED {"source": "emplois-de-linclusion", "id": "emplois-de-linclusion--null", "nom": "Nom de la structure \'emplois-de-linclusion--null\'", "date_maj": "2025-02-14", "description": null, "lien_source": null, "siret": null, "commune": null, "code_postal": null, "code_insee": null, "adresse": null, "complement_adresse": null, "longitude": null, "latitude": null, "telephone": null, "courriel": null, "site_web": null, "horaires_accueil": null, "accessibilite_lieu": null, "reseaux_porteurs": null}',
    'count=0 label=Structure removed by collection',
    'Importing services',
    'HTTP Request: GET https://api.data.inclusion.gouv.fr/api/v1/services?page=1&size=5000 "HTTP/1.1 200 OK"',
    'count=0 label=Service had the same key in collection and queryset',
    'count=4 label=Service added by collection',
    '\tADDED {"source": "dora", "structure_id": "dora--cc4e1fbc-533b-46e2-8b33-bc31c33c9ffd", "id": "dora--46f7ea19-c97b-4f45-90a9-027b44cad927", "nom": "Les emplois de l\'inclusion", "description": "## **En tant que prescripteur :**\\n\\n- Vous trouvez les opportunités de travail à destination des publics éloignés de l\'emploi (Contrats d\'insertion, contrats en entreprise adaptée, contrats d\'alternance en Geiq, contrats dans le cadre des clauses d\'insertion…).\\n\\n- Vous orientez vos publics en difficulté auprès des employeurs solidaires et suivez les résultats des candidatures (embauches, refus…).\\n\\n\\n<!-- -->\\n\\n## En tant qu\'employeur solidaire : \\n\\n- Vous publiez vos besoins en recrutement afin de recevoir des candidatures.\\n\\n- Vous disposez d\'un tableau de bord pour gérer vos candidatures et vos embauches.\\n\\n- Dans le cadre des contrats en structure d\'insertion, vous obtenez le PASS IAE afin de faciliter vos démarches liées à l\'aide au poste.\\n\\n\\n<!-- -->\\n\\n## En tant que candidat : \\n\\n- Vous trouvez les employeurs solidaires près de chez vous\\n\\n- Vous pouvez postuler directement auprès des employeurs solidaires ou faire le choix d\'être orienté par votre conseiller à l\'emploi ou accompagnateur social.\\n\\n\\n<!-- -->", "lien_source": "https://dora.inclusion.gouv.fr/services/plateforme-de-linclu-les-emplois-de-lincl", "date_maj": "2026-02-10", "type": "atelier", "thematiques": ["trouver-un-emploi--repondre-a-des-offres-demploi", "trouver-un-emploi--faire-des-candidatures-spontanees"], "frais": "gratuit", "frais_precisions": null, "publics": ["beneficiaires-des-minimas-sociaux", "actifs", "personnes-en-situation-durgence", "personnes-en-situation-de-handicap", "jeunes", "personnes-exilees", "familles", "demandeurs-emploi", "seniors", "femmes"], "publics_precisions": "Public femme en difficulté, Parent isolé, Demandeur d’emploi bénéficiaire des minimas sociaux, Demandeur d’emploi non indemnisé, Demandeur d’emploi en contrat aidé, Bénéficiaire du Revenu de Solidarité Active (RSA), Bénéficiaires de l\'Allocation de Solidarité Spécifique (ASS), Personnes sans hébergement / Hébergées / Ayant un parcours de rue, Personnes arrivées récemment en France, Bénéficiaire de l\'Allocation Adulte Handicapé (AAH), Demandeur d\'emploi avec un projet de créateur/reprise d\'entreprise, Public senior + de 50 ans, Personnes en situation de handicap, Demandeur d\'emploi, Public moins de 26 ans, Jeune de moins de 30 ans inclus, Demandeur d\'emploi indemnisé, Jeunes de 18 à 24 ans, Jeunes sortants de l\'Aide Sociale à l\'Enfance (ASE), Bénéficiaire de l\'obligation d\'emploi des travailleurs handicapés (RQTH, AAH, invalidité...), Travailleur indépendant", "conditions_acces": null, "commune": null, "code_postal": null, "code_insee": null, "adresse": null, "complement_adresse": null, "longitude": null, "latitude": null, "telephone": null, "courriel": "contact.emplois@example.com", "modes_accueil": ["a-distance"], "zone_eligibilite": ["france"], "contact_nom_prenom": "Z... H...", "lien_mobilisation": "https://dora.inclusion.gouv.fr/services/plateforme-de-linclu-les-emplois-de-lincl/orienter", "modes_mobilisation": ["utiliser-lien-mobilisation"], "mobilisable_par": ["professionnels", "usagers"], "mobilisation_precisions": "S\'inscrire et postuler sur https://emplois.inclusion.beta.gouv.fr/ S\'inscrire et postuler sur https://emplois.inclusion.beta.gouv.fr/", "volume_horaire_hebdomadaire": null, "nombre_semaines": null, "horaires_accueil": null}',
    'HTTP Request: GET https://dora-api/api/emplois/services/ "HTTP/1.1 200 OK"',
    '\tADDED {"source": "dora", "structure_id": "dora--cc4e1fbc-533b-46e2-8b33-bc31c33c9ffd", "id": "dora--b6f651e2-56d7-4ffa-a1c6-ae7295089a9e", "nom": "Immersion Facilitée", "description": "Nous proposons un moteur de recherche simple pour trouver et entrer en relation avec une entreprise susceptible d\'accueillir en immersion.\\n\\nNous proposons également un formulaire en ligne pour initier votre demande de convention d\'immersion.\\n\\n[Accéder au service](<https://immersion-facile.beta.gouv.fr/?mtm_campaign=ReferencementIFDORA>)", "lien_source": "https://dora.inclusion.gouv.fr/services/plateforme-de-linclu-immersion-facilitee", "date_maj": "2026-02-13", "type": "formation", "thematiques": ["choisir-un-metier--connaitre-les-opportunites-demploi", "preparer-sa-candidature--valoriser-ses-competences", "choisir-un-metier--identifier-ses-points-forts-et-ses-competences", "choisir-un-metier--confirmer-son-choix-de-metier", "choisir-un-metier--decouvrir-un-metier-ou-un-secteur-dactivite", "trouver-un-emploi--repondre-a-des-offres-demploi"], "frais": "gratuit", "frais_precisions": null, "publics": null, "publics_precisions": null, "conditions_acces": null, "commune": null, "code_postal": null, "code_insee": null, "adresse": null, "complement_adresse": null, "longitude": null, "latitude": null, "telephone": null, "courriel": "contact.if@example.com", "modes_accueil": ["a-distance"], "zone_eligibilite": ["france"], "contact_nom_prenom": null, "lien_mobilisation": "https://dora.inclusion.gouv.fr/services/plateforme-de-linclu-immersion-facilitee/orienter", "modes_mobilisation": ["utiliser-lien-mobilisation"], "mobilisable_par": ["professionnels", "usagers"], "mobilisation_precisions": "https://immersion-facile.beta.gouv.fr/?mtm_campaign=ReferencementIFDORA https://immersion-facile.beta.gouv.fr/?mtm_campaign=ReferencementIFDORA", "volume_horaire_hebdomadaire": null, "nombre_semaines": null, "horaires_accueil": null}',
    '\tADDED {"source": "emplois-de-linclusion", "structure_id": "emplois-de-linclusion--empty", "id": "emplois-de-linclusion--empty", "nom": "", "description": "", "lien_source": "", "date_maj": "2026-02-10", "type": null, "thematiques": [], "frais": null, "frais_precisions": "", "publics": [], "publics_precisions": "", "conditions_acces": "", "commune": "", "code_postal": "", "code_insee": "", "adresse": "", "complement_adresse": "", "longitude": 0.0, "latitude": 0.0, "telephone": "", "courriel": "", "modes_accueil": [], "zone_eligibilite": [], "contact_nom_prenom": "", "lien_mobilisation": "", "modes_mobilisation": [], "mobilisable_par": [], "mobilisation_precisions": "", "volume_horaire_hebdomadaire": "", "nombre_semaines": 0, "horaires_accueil": ""}',
    'HTTP Request: GET https://dora-api/api/emplois/disabled-dora-form-di-structures/ "HTTP/1.1 200 OK"',
    '\tADDED {"source": "emplois-de-linclusion", "structure_id": "emplois-de-linclusion--null", "id": "emplois-de-linclusion--null", "nom": "Nom du service \'emplois-de-linclusion-null\'", "description": "Description du service \'emplois-de-linclusion-null\'", "lien_source": null, "date_maj": "2026-02-10", "type": null, "thematiques": null, "frais": null, "frais_precisions": null, "publics": null, "publics_precisions": null, "conditions_acces": null, "commune": null, "code_postal": null, "code_insee": null, "adresse": null, "complement_adresse": null, "longitude": null, "latitude": null, "telephone": null, "courriel": null, "modes_accueil": null, "zone_eligibilite": null, "contact_nom_prenom": null, "lien_mobilisation": null, "modes_mobilisation": null, "mobilisable_par": null, "mobilisation_precisions": null, "volume_horaire_hebdomadaire": null, "nombre_semaines": null, "horaires_accueil": null}',
    'count=0 label=Service removed by collection',
    'Import additional informations from DORA',
    "Change 'is_orientable_with_form' ('True' -> 'False') for count=0 services based on count=2 structures",
    'count=2 label=Service had the same key in collection and queryset',
    'count=0 label=Service added by collection',
    'count=0 label=Service removed by collection',
  ])
# ---
